[package]
name = "askama-markdown-cmark"
version = "0.1.0"
authors = ["blakehawkins <blake.hawkins.11@gmail.com>"]
edition = "2021"
description = "Askama filter for markdown, using pulldown-cmark."
documentation = "https://docs.rs/askama-markdown-cmark"
repository = "https://github.com/blakehawkins/askama-markdown-cmark"
readme = "README.md"
keywords = ["askama", "templating", "markdown", "md", "commonmark"]
license = "Apache-2.0/MIT"

[dependencies]
askama = "0.12"
pulldown-cmark = "0.11"
